include/driver_station_rtc.h

/** Opaque stream handle. Store this as an IntPtr or SafeHandle in .NET. */
typedef struct DriverStationRtcStream DriverStationRtcStream;
typedef enum DriverStationRtcResult {
    DRIVER_STATION_RTC_SUCCESS = 0,
    DRIVER_STATION_RTC_NO_FRAME = 1,
    DRIVER_STATION_RTC_INVALID_ARGUMENT = -1,
    DRIVER_STATION_RTC_MODULE_NOT_STARTED = -2,
    DRIVER_STATION_RTC_OUT_OF_MEMORY = -3,
    DRIVER_STATION_RTC_INVALID_STATE = -4,
    DRIVER_STATION_RTC_NETWORK_ERROR = -5,
    DRIVER_STATION_RTC_DECODE_ERROR = -6,
    DRIVER_STATION_RTC_INTERNAL_ERROR = -7
} DriverStationRtcResult;
typedef enum DriverStationRtcStreamState {
    DRIVER_STATION_RTC_STREAM_CONNECTING = 0,
    DRIVER_STATION_RTC_STREAM_RUNNING = 1,
    DRIVER_STATION_RTC_STREAM_STOPPED = 2,
    DRIVER_STATION_RTC_STREAM_FAILED = 3
} DriverStationRtcStreamState;
typedef enum DriverStationRtcPixelFormat {
    /** Four bytes per pixel in memory: blue, green, red, then opaque alpha. */
    DRIVER_STATION_RTC_PIXEL_FORMAT_BGRA8888 = 1
} DriverStationRtcPixelFormat;
/** Notification callback for decoded frames and asynchronous stream errors. */
typedef void (*DriverStationRtcFrameCallback)(
    DriverStationRtcResult result,
    void* user_data);
/**
 * An Avalonia-ready decoded bitmap and its library-owned memory buffer.
 *
 * Initialize the whole structure to zero before its first use. The library
 * allocates or grows data as necessary. Pass the same structure back to
 * DriverStationRtc_GetNewestFrame() to reuse its allocation, and call
 * DriverStationRtc_FreeFrame() once when the caller no longer needs it.
 * A non-null data pointer must have been allocated by this library.
 */
typedef struct DriverStationRtcFrame {
    uint8_t* data;
    size_t length;
    size_t capacity;
    uint32_t width;
    uint32_t height;
    uint32_t stride;
    DriverStationRtcPixelFormat pixel_format;
    uint64_t timestamp_us;
} DriverStationRtcFrame;
/** Starts process-wide WebRTC resources. Idempotent. */
DRIVER_STATION_RTC_API DriverStationRtcResult DriverStationRtc_StartModule(void);
/**
 * Stops every active stream and releases process-wide WebRTC resources.
 * All stream handles become invalid. Idempotent.
 */
DRIVER_STATION_RTC_API DriverStationRtcResult DriverStationRtc_StopModule(void);
/**
 * Starts an asynchronous WHEP receive session.
 *
 * url may be either an HTTP URL or host:port/path; for example,
 * "http://limelight.local:5807/whep". The returned handle is valid while the
 * connection is still being established. Poll DriverStationRtc_GetStreamState
 * to distinguish connecting, running, and failed streams.
 *
 * callback receives DRIVER_STATION_RTC_SUCCESS after each decoded bitmap is
 * published and can then call DriverStationRtc_GetNewestFrame(). It receives an
 * error result for asynchronous connection or decode failures. callback runs on
 * an internal thread and may call DriverStationRtc_StopStream(). It is never
 * called after DriverStationRtc_StopStream() or DriverStationRtc_StopModule()
 * has returned.
 */
DRIVER_STATION_RTC_API DriverStationRtcResult DriverStationRtc_StartStream(
    const char* url,
    DriverStationRtcFrameCallback callback,
    void* user_data,
    DriverStationRtcStream** stream);
/** Stops a stream, releases its resources, and invalidates its handle. */
DRIVER_STATION_RTC_API DriverStationRtcResult DriverStationRtc_StopStream(
    DriverStationRtcStream* stream);
/** Returns the current asynchronous connection state. */
DRIVER_STATION_RTC_API DriverStationRtcStreamState DriverStationRtc_GetStreamState(
    DriverStationRtcStream* stream);
/**
 * Returns the stream's latest asynchronous error as a thread-local UTF-8
 * string. The pointer remains valid until the next call on the same thread.
 */
DRIVER_STATION_RTC_API const char* DriverStationRtc_GetStreamError(
    DriverStationRtcStream* stream);
/**
 * Copies the newest decoded BGRA8888 bitmap into frame.
 *
 * Returns DRIVER_STATION_RTC_NO_FRAME when no frame has arrived since the last
 * successful call for this stream. In that case length and bitmap metadata are
 * cleared, while data and capacity are retained for reuse.
 */
DRIVER_STATION_RTC_API DriverStationRtcResult DriverStationRtc_GetNewestFrame(
    DriverStationRtcStream* stream,
    DriverStationRtcFrame* frame);
/** Frees a frame buffer allocated by this library and zeros the structure. */
DRIVER_STATION_RTC_API void DriverStationRtc_FreeFrame(DriverStationRtcFrame* frame);